Bug 852420 - Suppress NeededToWrapXUL warning for generated content, r=bz

--HG--
extra : rebase_source : e6aa39b0e7ea7faa3c95cd5a4fd5f87058441c16